--- a/app/views/login.html
+++ b/app/views/login.html
@@ -106,7 +106,7 @@
 
                             <form method="post" role="form" method="post" id="loginform">
                                 <div class="form-group">
-                                    <label for="userName">User Name</label>
+                                    <label for="userName">Username</label>
                                     <input type="text" class="form-control" id="userName" name="userName" value="{{userName}}" placeholder="Enter User Name">
                                 </div>
 
