--- a/app/views/login.html
+++ b/app/views/login.html
@@ -117,7 +117,7 @@
                                 <input type="hidden" name="_csrf" value="{{csrftoken}}" />
 
                                 <div class="row">
-                                    <div class="col-lg-4"><a href="/signup">New user? Sign Up</a>
+                                    <div class="col-lg-4"><a href="/signup">New user? Sign Up!</a>
                                     </div>
                                     <div class="col-lg-5"></div>
                                     <div class="col-lg-3">
