--- a/app/views/tutorial/a1.html
+++ b/app/views/tutorial/a1.html
@@ -18,7 +18,7 @@
                 <h3 class="panel-title">Description</h3>
             </div>
             <div class="panel-body">
-                Boobs. Injection flaws occur when untrusted data is sent to an interpreter as part of a command or query. The attacker’s hostile data can trick the interpreter into executing unintended commands or accessing data without proper authorization.
+                Injection flaws occur when untrusted data is sent to an interpreter as part of a command or query. The attacker’s hostile data can trick the interpreter into executing unintended commands or accessing data without proper authorization.
             </div>
         </div>
         <!-- 
