--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,7 +7,7 @@
     <meta name="description" content="OWASP NodeGoat Project: Insecure App">
     <meta name="version" content="v1.1">
 
-    <title>OWASP Node Goat</title>
+    <title>CS132 Security Lab</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/bootstrap.css" rel="stylesheet">
@@ -43,10 +43,10 @@
                         <ul class="dropdown-menu alert-dropdown" style="min-width: 350px; padding: 10px">
                             <li>
                                 <p>
-                                    The OWASP Node Goat is an educational Node.js web application vulnerable to the <a target="_blank" href="https://www.owasp.org/index.php/Top_10_2013-Top_10"> OWASP Top 10</a> risks.</p>
+                                    This lab was built off of OWASP's Node Goat, which is an educational Node.js web application vulnerable to the <a target="_blank" href="https://www.owasp.org/index.php/Top_10_2013-Top_10"> OWASP Top 10</a> risks.</p>
                                 <p>It is intended to show how each of these vulnerabilities can manifest in a Node.js specific way, and provides the subsequent mitigation for each with source code examples.
                                 </p>
-                                <p>To start hacking the application, login using the form below, or access the tutorial guide to know more.</p>
+                                <p>To start hacking the application, login using the form below.</p>
 
                             </li>
                             <li class="divider"></li>
@@ -74,13 +74,6 @@
                 <div class="col-lg-4"></div>
 
                 <div class="col-lg-4">
-                    <div class="panel panel-info">
-                        <div class="panel-heading" style="text-align: center">
-                            <a href="/tutorial" target="_blank"> <b><span class="fa fa-book"></span> Tutorial Guide:</b> Learn OWASP Top 10
-                            </a>
-                        </div>
-
-                    </div>
 
                     <div class="panel panel-default">
                         <div class="panel-heading" style="text-align: center">
