--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OWASP Node.js Goat Project</title>
+    <title>CS132 Security Lab</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/bootstrap.css" rel="stylesheet">
