Editing login.html

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,7 +7,7 @@
     <meta name="description" content="OWASP NodeGoat Project: Insecure App">
     <meta name="version" content="v1.1">
 
-    <title>TESTING</title>
+    <title>THIS IS A TEST</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/bootstrap.css" rel="stylesheet">
