--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CS132 Security Lab</title>
+    <title>YOOOOOOOOOOOOOOOOOO</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/bootstrap.css" rel="stylesheet">
